Implement unit tests to validate service functionality #4 (#21)
* feat(wallet): implement wallet balance retrieval from transactions #4

* Addressed review comments

* Implemented wallet balance retrieval functionality

* Addressed review comments

* Added unit tests for getWalletBalance function

* Added unit tests for getWalletBalance function

* Initial Commit

* Added unit tests for getWalletBalance functionality

* Added unit tests for the transactionsService

* Added unit tests for the transactionsService

* All unit tests passed successfully

* Added test to validate invalid transaction status transitions

---------

Co-authored-by: Michael Okuboyejo <mykelokuboyejo@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,12 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: wallet_db
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -22,7 +22,7 @@ services:
   wallet-service:
     build: .
     ports:
-      - "3001:3001"
+      - '3001:3001'
     environment:
       NODE_ENV: development
       DB_HOST: postgres
