--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -19,5 +22,5 @@
     "noFallthroughCasesInSwitch": false
   },
 
-   "include": ["src/**/*"]
+  "include": ["src/**/*", "spec/controllers/wallet.controller.spec.ts"]
 }
