--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "decimal.js": "^10.6.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^11.1.6",
+    "@types/decimal.js": "^0.0.32",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.0.0",
@@ -58,22 +60,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "spec",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
