Implement User Service #7 (#23)
* Implement User Service #7

* Addressed review comments

* Addressed Review Comments

* Addressed Review comments

* Firebase Google sign up working correctly, user and wallet creation verified

* Addressed review comments and wrote tests

* Added more tests

* Align dev dependencies for jest and typescript compatibility

* Updated .env.example with dummy data

* Addressed review comment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
     "noFallthroughCasesInSwitch": false
   },
 
-  "include": ["src/**/*", "spec/controllers/wallet.controller.spec.ts"]
+  "include": [
+    "src/**/*",
+    "config/**/*",
+    "spec/controllers/wallet.controller.spec.ts"
+  ]
 }
