Added username support (#24)
This PR adds username support to the UserService by introducing a username field in the User entity with validation and uniqueness constraints, setting the default username to the user’s email during signup, and providing two new endpoints: one for checking username availability (GET /users/username-availability?username={username}) and another for updating a user’s username (PATCH /users/:id/username). It also enforces validation rules such as alphanumeric-only characters, length between 3–20 characters, and reserved names checks, along with comprehensive unit tests for both the service and controller methods.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,5 @@
     "noFallthroughCasesInSwitch": false
   },
 
-  "include": [
-    "src/**/*",
-    "config/**/*",
-    "spec/controllers/wallet.controller.spec.ts"
-  ]
+  "include": ["src/**/*", "config/**/*", "spec/**/*"]
 }
