Implement Transaction Email Notifications #10 (#28)
* Implement Transaction Email Notifications #10

* Verified email is sent and received

* Resolved failing tests

* Switched to username instead of walletId, moved client info to controller, improved email formatting

* Addressed review comments

* Addressed review comments and added transaction history feat with tests

* transaction history

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ APIKEY="your-api-key"
 # JWT config
 JWT_SECRET="your-jwt-secret"
 JWT_EXPIRE_IN=1d
+RESEND_API_KEY="your-resend-api-key"
+EMAIL_DOMAIN=yourdomain.com
+EMAIL_FROM=Your App
