--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@react-email/components": "^0.5.1",
+    "@react-email/render": "^1.2.1",
     "axios": "^1.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -41,7 +43,10 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "reflect-metadata": "^0.1.13",
+    "resend": "^6.0.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.25"
