Created Slack Notification Service #25 (#29)
* Created Slack Notification Service #25

* Adjusted unit tests

* Addresed Review comments

* Addresed Review comments

* Addresed Review comments

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,4 @@ JWT_EXPIRE_IN=1d
 RESEND_API_KEY="your-resend-api-key"
 EMAIL_DOMAIN=yourdomain.com
 EMAIL_FROM=Your App
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/xxxx/yyyy/zzzz
