Added Paystack integration (#37)
* Addressed review comments

* Addressed review comments

* Refactored finalizeTopup function

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ RESEND_API_KEY="your-resend-api-key"
 EMAIL_DOMAIN=yourdomain.com
 EMAIL_FROM=Your App
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/xxxx/yyyy/zzzz
+PAYSTACK_SECRET_KEY="secret key"
+PAYSTACK_URL="paystack url"
