--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,13 +22,8 @@ services:
     build: .
     ports:
       - '3001:3001'
-    environment:
-      NODE_ENV: development
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_USERNAME: postgres
-      DB_PASSWORD: password
-      DB_NAME: wallet_db
+    env_file:
+      - .env
     depends_on:
       postgres:
         condition: service_healthy
