Added wallet cashout functionality (#40)
* Added wallet cashout functionality

* Added callback endpoint for wallet topup verification

* Decoupled Paystack and Wallet services to avoid circular dependency

* Decoupled Paystack and Wallet services to avoid circular dependency.

* Decoupled Paystack and Wallet services to avoid circular dependency..

* Updated AuthService to use user context and send login alert email

* Fixed Tests

* Refactored Webhook handler

---------

Co-authored-by: Michael Okuboyejo <mykelokuboyejo@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "jsxImportSource": "react"
   },
 
-  "include": ["src/**/*", "config/**/*", "spec/**/*"]
+  "include": ["src/**/*", "config/**/*", "spec/**/*", "src/utils/**/*.d.ts"]
 }
