--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.2",
     "decimal.js": "^10.6.0",
     "firebase-admin": "^13.4.0",
+    "geoip-lite": "^1.4.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -48,7 +49,8 @@
     "resend": "^6.0.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.8.2",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "ua-parser-js": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
@@ -59,9 +61,11 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/decimal.js": "^0.0.32",
     "@types/express": "^4.17.13",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-jest": "^27.5.1",
